# coconut

./: .gitmodules  CMakeLists.txt  README.md  coconut-client.cpp  coconut-gen.cpp  ext_1.csv  nnweights.hxx  qa.thrift  setup.sh  trecqa  weights.avro  weights.avsc  weights.hxx
cmake/: Findavro.cmake
